[arbitrary-mimas] several refinement